# grasp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  grasp-how-it-actually-works.md  index.html  install.ps1  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: eval.rs  main.rs  mcp.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: config.rs  embed.rs  extractor.rs  import.rs  lib.rs  model.rs  redact.rs  util.rs  watch.rs
crates/engram-core/src/store/: db.rs  graph.rs  index.rs  markdown.rs  mod.rs  vectors.rs
crates/engram-core/tests/: import_search.rs
crates/grasp-cli/: Cargo.toml
crates/grasp-cli/src/: autostart.rs  eval.rs  main.rs  mcp.rs
crates/grasp-core/: Cargo.toml
crates/grasp-core/src/: config.rs  embed.rs  extractor.rs  import.rs  lib.rs  model.rs  parser.rs  redact.rs  watch.rs
crates/grasp-core/src/store/: db.rs  markdown.rs  vectors.rs
crates/grasp-core/tests/: import_search.rs
eval/: queries.json
frontend/: index.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/components/: Archive.tsx  BrainLoader.tsx  DocsView.tsx  GraphView.tsx  LoadingScreen.tsx  NoteView.tsx  Overview.tsx  ProjectView.tsx  SearchView.tsx  Sidebar.tsx
src/lib/: api.ts  format.ts  useElementSize.ts
