[package]
name = "grasp-app"
version = "0.2.0"
edition = "2021"
description = "Grasp desktop app (Tauri shell over the engine)."

[[bin]]
name = "grasp-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
grasp-core = { path = "../crates/grasp-core" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
