[package]
name = "engram-cli"
version = "0.1.0"
edition = "2021"
description = "Engram command-line interface (import, search, projects, stats)."

[[bin]]
name = "engram"
path = "src/main.rs"

[dependencies]
engram-core = { path = "../engram-core" }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
