[package]
name = "engram-core"
version = "0.1.0"
edition = "2021"
description = "Engram engine: parse Claude Code transcripts, extract signal, store to SQLite + markdown."

[lib]
name = "engram_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
