[package]
name = "grasp-cli"
version = "0.2.0"
edition = "2021"
description = "Grasp command-line interface (import, search, projects, stats)."

[[bin]]
name = "grasp"
path = "src/main.rs"

[dependencies]
grasp-core = { path = "../grasp-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
