[package]
name = "grasp-core"
version = "0.1.0"
edition = "2021"
description = "Grasp engine: parse Claude Code transcripts, extract signal, store to SQLite + markdown."

[lib]
name = "grasp_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
walkdir = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
hf-hub = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
